# fvtools

./: .gitignore  README.md  Singularity.def  environment.yaml  filepaths.md  py3.def  pyproject.toml  requirements.txt
fvtools/: filelocations.py
fvtools/atm/: README.md  atm_grids.py  interp_tools.py  read_era5.py  read_files_interp_surface.py  read_metCoop.py  run_wrf2fvcom.py  wrf_make_file_list.py
fvtools/bathymetry/: README  bathymetry.py
fvtools/fabm/: fabm.py
fvtools/grid/: arome_grid.py  base.py  cropper_roms.py  era5_grid.py  fvcom_grd.py  fvgrid.py  glorys_grid.py  grid_metrics.py  roms_grid.py  tge.py  tools.py
fvtools/gridding/: CorrAngles.py  check_topo.py  coast.py  convert-format.py  domain.py  estimator.py  merge_coastfiles.py  mk2dm.py  ocean.py  prepare_inputfiles.py  process_coastline.py  roms_ocean2shape.py
fvtools/injection/: makedata.py
fvtools/interpolators/: README.md  arome_interpolators.py  glorys_interpolators.py  horizontal_interpolator.py  nearest4.py  roms_interpolators.py
fvtools/meshing-template/: PolyParameters.txt
fvtools/meshingtemplate/: config.yml  job_distances.sh  make_mesh.py  set_coastres.py
fvtools/nesting/: add_tides.py  check_nest.py  fill_nesting_gaps.py  fvcom2fvcom.py  fvcom2fvcom_nesting.py  get_fvcom_ngrd.py  get_ngrd.py  get_roms_ngrd.py  grids.py  matchtopo.py  nesting.py  obcgridding.py  roms2fvcom.py  roms_nesting_fg.py  roms_nesting_fg_ocean_time.py  set_weights.py  vertical_interpolation.py
fvtools/plot/: README_botvel_plotting_hk.md  fvcom_plot.py  fvcom_quality_control.py  fvcom_streamlines.py  (+14 more)
(+53 files in other folders)
