[project]
name = "fvtools"
version = "1.0"
description = "Collection of scripts that can be usefull when dealing with fvcom at akvaplan-niva"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ffmpeg-python",
    "affine",
    "asttokens",
    "attrs",
    "backcall",
    "certifi",
    "cftime",
    "charset-normalizer",
    "click",
    "click-plugins",
    "cligj",
    "cmocean",
    "contextily",
    "contourpy",
    "cycler",
    "decorator",
    "executing",
    "Fiona",
    "fonttools",
    "geographiclib",
    "geopy",
    "idna",
    "ipython",
    "jedi",
    "joblib",
    "kiwisolver",
    "lxml",
    "matplotlib",
    "matplotlib-inline",
    "mercantile",
    "munch",
    "networkx",
    "OWSLib",
    "packaging",
    "pandas",
    "parso",
    "pexpect",
    "pickleshare",
    "Pillow",
    "prompt-toolkit",
    "ptyprocess",
    "pure-eval",
    "Pygments",
    "pyparsing",
    "pyproj",
    "pyshp",
    "python-dateutil",
    "pyTMD",
    "pytz",
    "PyYAML",
    "rasterio",
    "requests",
    "scipy",
    "seawater",
    "six",
    "snuggs",
    "stack-data",
    "traitlets",
    "typing_extensions",
    "tzdata",
    "urllib3",
    "utm",
    "wcwidth",
    "xarray",
    "xyzservices",
    "chardet",
    "numba",
    "progressbar2>=4.5.0",
    "jupyterlab",
    "geopandas",
    "cartopy",
    "ipympl",
    "pykdtree",
    "f90nml"
]
